test/compiler_errors/case_mismatch.lzx
<canvas width="100" height="100">
<view width="10" height="10" onClick="Debug.write('gotclick')"/>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2007 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
</canvas>
